--- a/CAT Alignment.Rmd
+++ b/CAT Alignment.Rmd
@@ -131,3 +131,95 @@ may need to use the documentation of the algorithm rather
 than the algorithm itself to understand the processes used to
 control content for the test
 ---
+
+# Alignment information
+
+### The Test Event Records
+The most direct way to evaluate alignment with a CAT is to examine the records from actual test events.
+
+<br>
+Because there will typically be a large number of unique test events, the evaluator will need to examine a sample of test events that is large enough to allow the identification of unusual content patterns and diverse enough to cover the range of student outcomes.
+---
+
+# CAT Alignment Framework
+
+### Potential Threats to Alignment
+
+-  The test plan may inadequately sample the content domain.
+
+- The item meta-tags may be inaccurate.
+
+-  The item pool may be inadequate, either in numbers of items or range of difficulty.
+
+<br>
+
+--
+**Examining Threats**
+1. Test Plan
+
+2. Item Pool
+
+3. Test Event Records
+---
+
+# Evaluating the Test Plan
+The alignment evaluator will review the test plan that was established by the test owner
+and provide an assessment of the test plan alignment.
+
+<br>
+--
+.center[** To be completed before CAT program become operational**]
+<br>
+<br>
+--
+1. Are the elements of the assessment all included in the content domain?
+
+2. Do the elements of the assessment represent a broad cross-section of the content domain?
+
+3. Are important elements of the content domain absent from the test plan?
+---
+
+# Evaluation the Item Pool
+
+How capable is the item pool to provide well-aligned test events.
+
+<br>
+
+--
+
+This will provide useful information regarding the vulnerability of
+the item pool to the alignment threat of meta-data misspecification.
+
+<br>
+
+--
+As a rule of thumb, it is recommended that the item sample consist of at least 20% of the pool at each
+grade level or minimum of 100 items (whichever is larger).
+
+<br>
+
+--
+The alignment evaluator should also assess the item pool’s vulnerability to the alignment threats of inadequate pool
+depth and inadequate difficulty range.
+---
+
+# Evaluating Test Event Records
+
+1. Item-by-item history of that test event.
+
+2. Sequence of each item administered and it's difficulty.
+
+3. The correctness of the response to that item.
+
+4. The examinee’s provisional achievement estimate after that item had been scored.
+
+5.  The examinee’s final achievement estimate along with its standard error.
+
+<br>
+
+<br>
+--
+.center[**Review of test records should provide an overall indicator as to whether and what extent the CAT was affected by alignment threats**]
+---
+
+# Content Alignment Indicators
